update first page

--- a/index.html
+++ b/index.html
@@ -80,11 +80,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="shore-aside__arrow-down">
-                                <div class="shore-aside__arrow-img">
-                                    <img src="./img/shore/arrows-down.svg" alt="down">
-                                </div>
-                            </div>
                         </aside>
                         <div class="shore__main">
                             <div class="shore__main-content">
@@ -215,21 +210,28 @@
                                             <img src="./img/shore/arrow-white.svg" alt="arrow">
                                         </div>
                                         <div class="shore__slider-location location-items">
-                                            <div class="location-items__item">
-                                                <div class="location-items__number">01</div>
-                                                <div class="location-items__name">North Shore</div>
+                                            <div class="location-items__arrow-down">
+                                                <div class="location-items__arrow-img">
+                                                    <img src="./img/shore/arrows-down.svg" alt="down">
+                                                </div>
                                             </div>
-                                            <div class="location-items__item">
-                                                <div class="location-items__number">02</div>
-                                                <div class="location-items__name">South Shore</div>
-                                            </div>
-                                            <div class="location-items__item">
-                                                <div class="location-items__number">03</div>
-                                                <div class="location-items__name">West Shore</div>
-                                            </div>
-                                            <div class="location-items__item">
-                                                <div class="location-items__number">04</div>
-                                                <div class="location-items__name">East Shore</div>
+                                            <div class="location-items__columns">
+                                                <div class="location-items__item">
+                                                    <div class="location-items__number">01</div>
+                                                    <div class="location-items__name">North Shore</div>
+                                                </div>
+                                                <div class="location-items__item">
+                                                    <div class="location-items__number">02</div>
+                                                    <div class="location-items__name">South Shore</div>
+                                                </div>
+                                                <div class="location-items__item">
+                                                    <div class="location-items__number">03</div>
+                                                    <div class="location-items__name">West Shore</div>
+                                                </div>
+                                                <div class="location-items__item">
+                                                    <div class="location-items__number">04</div>
+                                                    <div class="location-items__name">East Shore</div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
