made part of sufr section

--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
                                         <div class="shore-aside__search-icon">
                                             <img src="./img/shore/Searsc.svg" alt="Search">
                                         </div>
-                                        <div class="shore-aside__search-field"></div>
+                                        <div class="shore-aside__search-field">
+                                            <input type="text" class="shore-aside__input" placeholder="Search">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="shore-aside__info">
                                     <div class="shore-aside__info-box">
                                         <div class="shore-aside__data data-shore">
                                             <div class="data-shore__day">20</div>
-                                            <div class="data-shore__month-year">06 | 2022</div>
+                                            <div class="data-shore__month-year">06.2022</div>
                                         </div>
                                         <div class="shore-aside__location location-shore">
                                             <div class="location-shore__icon">
@@ -97,7 +99,7 @@
                                             <div class="info-slides__titles">
                                                 <div class="info-slides__surf surf-shore">
                                                     <div class="surf-shore__sub-title sub-title">Surf</div>
-                                                    <h1 class="surf-shore__title title">West shore</h1>
+                                                    <h1 class="surf-shore__title title">North shore</h1>
                                                 </div>
                                                 <div class="info-slides__conditional conditional-shore">
                                                     <div class="conditional-shore__sub-title sub-title">Condition</div>
@@ -127,7 +129,7 @@
                                             <div class="info-slides__titles">
                                                 <div class="info-slides__surf surf-shore">
                                                     <div class="surf-shore__sub-title sub-title">Surf</div>
-                                                    <h1 class="surf-shore__title title">East shore</h1>
+                                                    <h1 class="surf-shore__title title">South shore</h1>
                                                 </div>
                                                 <div class="info-slides__conditional conditional-shore">
                                                     <div class="conditional-shore__sub-title sub-title">Condition</div>
@@ -157,7 +159,7 @@
                                             <div class="info-slides__titles">
                                                 <div class="info-slides__surf surf-shore">
                                                     <div class="surf-shore__sub-title sub-title">Surf</div>
-                                                    <h1 class="surf-shore__title title">North shore</h1>
+                                                    <h1 class="surf-shore__title title">West shore</h1>
                                                 </div>
                                                 <div class="info-slides__conditional conditional-shore">
                                                     <div class="conditional-shore__sub-title sub-title">Condition</div>
@@ -186,7 +188,7 @@
                                             <div class="info-slides__titles">
                                                 <div class="info-slides__surf surf-shore">
                                                     <div class="surf-shore__sub-title sub-title">Surf</div>
-                                                    <h1 class="surf-shore__title title">South shore</h1>
+                                                    <h1 class="surf-shore__title title">East shore</h1>
                                                 </div>
                                                 <div class="info-slides__conditional conditional-shore">
                                                     <div class="conditional-shore__sub-title sub-title">Condition</div>
@@ -241,6 +243,165 @@
                     </div>
                     <div class="shore__bak-lay _ibg">
                         <img src="./img/shore/Surf_The_Wave.png" alt="Surf on the Wave">
+                    </div>
+                </div>
+            </section>
+            <section class="page__surf surf">
+                <div class="surf__container container">
+                    <div class="surf__body">
+                        <div class="surf__head">
+                            <div class="surf__title title">Surf
+                                <span>Surf</span>
+                                <p>Surf</p>
+                            </div>
+                        </div>
+                        <div class="surf__world">
+                            <div class="surf__box-world world-box">
+                                <div class="world-box__head">
+                                    <div class="world-box__sub-title sub-title">Current location</div>
+                                    <div class="world-box__small-title small-title">California | USA</div>
+                                </div>
+                                <div class="world-box__cards">
+                                    <div class="world-box__slider-beach">
+                                        <div class="world-box__slider-container">
+                                            <div class="world-box__slider-line">
+                                                <div class="world-box__slider-card card-slider">
+                                                    <div class="card-slider__box">
+                                                        <div class="card-slider__lable">
+                                                            <div class="card-slider__lable-box">
+                                                                <div class="card-slider__name-beach">Airlie</div>
+                                                                <div class="card-slider__country">Australia</div>
+                                                                <div class="card-slider__weather">
+                                                                    <div class="card-slider__weather-box">
+                                                                        <div class="card-slider__column weather-info">
+                                                                            <div class="weather-info__icon">
+                                                                                <img src="./img/surf/surf.svg" alt="Surf">
+                                                                            </div>
+                                                                            <div class="weather-info__indicators">9 - 13</div>
+                                                                            <div class="weather-info__name">surf (ft)</div>
+                                                                        </div>
+                                                                        <div class="card-slider__column weather-info">
+                                                                            <div class="weather-info__icon">
+                                                                                <img src="./img/surf/tide.svg" alt="Tide">
+                                                                            </div>
+                                                                            <div class="weather-info__indicators">+2.3</div>
+                                                                            <div class="weather-info__name">tide (ft)</div>
+                                                                        </div>
+                                                                        <div class="card-slider__column weather-info">
+                                                                            <div class="weather-info__icon">
+                                                                                <img src="./img/surf/wind.svg" alt="Surf">
+                                                                            </div>
+                                                                            <div class="weather-info__indicators">4 se</div>
+                                                                            <div class="weather-info__name">wind (kts)</div>
+                                                                        </div>
+                                                                        <div class="card-slider__arrow-right">
+                                                                            <img src="./img/shore/arrow-white.svg" alt="Arrow">
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="card-slider__coordinates">34.0501 N -118.2446 W</div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="surf__world-map">
+                                <img src="./img/surf/World_Map_Dots.svg" alt="Map">
+                            </div>
+                        </div>
+                        <div class="surf__surf-beach beach-slider">
+                            <div class="beach-slider__box">
+                                <div class="beach-slider__slider">
+                                    <div class="beach-slider__line">
+                                        <div id="beach-1" class="beach-slider__slide">
+                                            <div class="beach-slider__image">
+                                                <img src="./img/surf/malibu_beach.png" alt="Malibu">
+                                            </div>
+                                            <div class="beach-slider__cover"></div>
+                                            <div class="beach-slider__name">Malibu <br> Beach</div>
+                                            <div class="beach-slider__place">California | USA</div>
+                                        </div>
+                                        <div id="beach-2" class="beach-slider__slide">
+                                            <div class="beach-slider__image">
+                                                <img src="./img/surf/airline_beach.png" alt="Airline">
+                                            </div>
+                                            <div class="beach-slider__cover beach-slider__cover-active"></div>
+                                            <div class="beach-slider__name">Airline <br> Beach</div>
+                                            <div class="beach-slider__place">Queensland | Australia</div>
+                                        </div>
+                                        <div id="beach-3" class="beach-slider__slide">
+                                            <div class="beach-slider__image">
+                                                <img src="./img/surf/cloud_nine.png" alt="Cloud Nine">
+                                            </div>
+                                            <div class="beach-slider__cover"></div>
+                                            <div class="beach-slider__name">Cloud <br> Nine</div>
+                                            <div class="beach-slider__place">Siargao | Philippines</div>
+                                        </div>
+                                        <div id="beach-4" class="beach-slider__slide">
+                                            <div class="beach-slider__image">
+                                                <img src="./img/surf/vieux_boucau.png" alt="Vieux">
+                                            </div>
+                                            <div class="beach-slider__cover"></div>
+                                            <div class="beach-slider__name">Vieux <br> Boucau</div>
+                                            <div class="beach-slider__place">Hossegor | France</div>
+                                        </div>
+                                        <div id="beach-5" class="beach-slider__slide">
+                                            <div class="beach-slider__image">
+                                                <img src="./img/surf/la_torche.png" alt="La Tourche">
+                                            </div>
+                                            <div class="beach-slider__cover"></div>
+                                            <div class="beach-slider__name">La <br> Tourche</div>
+                                            <div class="beach-slider__place">Bretagne | France</div>
+                                        </div>
+                                    </div>
+                                    <div class="beach-slider__arrows">
+                                        <div class="beach-slider__left-arrow">
+                                            <img src="./img/surf/arrow-grey.svg" alt="arrow-left">
+                                        </div>
+                                        <div class="beach-slider__right-arrow">
+                                            <img src="./img/surf/arrow-grey.svg" alt="arrow-right">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page__test test">
+                <div class="test__container container">
+                    <div class="test__body">
+                        <div class="test__slider">
+                            <div class="test__slider-line">
+                                <div id="img1" class="test__image" >
+                                    <img src="./img/shore/test_1_1.png" alt="">
+                                    <div class="test__cover"></div>
+                                </div>
+                                <div id="img2" class="test__image active">
+                                    <img src="./img/shore/test_1_2.png" alt="">
+                                    <div class="test__cover test__cover-active"></div>
+                                </div>
+                                <div id="img3" class="test__image">
+                                    <img src="./img/shore/test_2_1.png" alt="">
+                                    <div class="test__cover"></div>
+                                </div>
+                                <div id="img4" class="test__image">
+                                    <img src="./img/shore/test_2_2.png" alt="">
+                                    <div class="test__cover"></div>
+                                </div>
+                                <div id="img5" class="test__image">
+                                    <img src="./img/shore/test_3_1.png" alt="">
+                                    <div class="test__cover"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="test__btn">
+                            <button>Push</button>
+                        </div>
                     </div>
                 </div>
             </section>
