finish with main changes

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                                             <div  class="info-slides__map">
                                                 <div class="info-slides__maps-box">
                                                     <div class="info-slides__maps-slide">
-                                                        <img src="./img/shore/test_1_2.png" alt="">
-                                                        <img src="./img/shore/test_1_1.png" alt="">
+                                                        <img src="./img/shore/map-north-1.png" alt="map">
+                                                        <img src="./img/shore/map-north-2.png" alt="map">
                                                     </div>
                                                 </div>
                                             </div>
@@ -119,10 +119,8 @@
                                             <div class="info-slides__map">
                                                 <div class="info-slides__maps-box">
                                                     <div class="info-slides__maps-slide">
-                                                        <img src="./img/shore/test_2_2.png" alt="">
-                                                        <img src="./img/shore/test_2_1.png" alt="">
-                                                        <img src="./img/shore/test_4_1.png" alt="">
-                                                        <img src="./img/shore/test_4_2.png" alt="">
+                                                        <img src="./img/shore/map-south-1.png" alt="map">
+                                                        <img src="./img/shore/map-south-2.png" alt="map">
                                                     </div>
                                                 </div>
                                             </div>
@@ -149,10 +147,8 @@
                                             <div class="info-slides__map">
                                                 <div class="info-slides__maps-box">
                                                     <div class="info-slides__maps-slide">
-                                                        <img src="./img/shore/test_3_2.png" alt="">
-                                                        <img src="./img/shore/test_3_1.png" alt="">
-                                                        <img src="./img/shore/test_2_1.png" alt="">
-                                                        <img src="./img/shore/test_2_2.png" alt="">
+                                                        <img src="./img/shore/map-west-1.png" alt="map">
+                                                        <img src="./img/shore/map-west-2.png" alt="map">
                                                     </div>
                                                 </div>
                                             </div>
@@ -179,9 +175,8 @@
                                             <div class="info-slides__map">
                                                 <div class="info-slides__maps-box">
                                                     <div class="info-slides__maps-slide">
-                                                        <img src="./img/shore/test_4_2.png" alt="">
-                                                        <img src="./img/shore/test_4_1.png" alt="">
-                                                        <img src="./img/shore/test_1_1.png" alt="">
+                                                        <img src="./img/shore/map-east-1.png" alt="map">
+                                                        <img src="./img/shore/map-east-2.png" alt="map">
                                                     </div>
                                                 </div>
                                             </div>
@@ -559,7 +554,7 @@
                                     </div>
                                     <div class="beach-slider__arrows">
                                         <div class="beach-slider__right-arrow">
-                                            <img src="./img/surf/arrow-grey.svg" alt="arrow-right">
+                                            <img src="./img/shore/arrow-white.svg" alt="arrow-right">
                                         </div>
                                     </div>
                                 </div>
