finish with animation

--- a/index.html
+++ b/index.html
@@ -1311,7 +1311,7 @@
                                     <img src="./img/shore/arrow-white.svg" alt="right">
                                 </div>
                             </div>
-                            <div id="1" class="shop__main-content shop__main-content-active">
+                            <div id="nugget" class="shop__main-content shop__main-content-active">
                                 <div class="shop__content-box">
                                     <div class="shop__board-info info-board">
                                         <div class="info-board__titles">
@@ -1382,7 +1382,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="2" class="shop__main-content shop__main-content-abs">
+                            <div id="gypsy" class="shop__main-content shop__main-content-abs">
                                 <div class="shop__content-box">
                                     <div class="shop__board-info info-board">
                                         <div class="info-board__titles">
@@ -1453,7 +1453,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div id="3" class="shop__main-content shop__main-content-abs">
+                            <div id="kona" class="shop__main-content shop__main-content-abs">
                                 <div class="shop__content-box">
                                     <div class="shop__board-info info-board">
                                         <div class="info-board__titles">
